--- a/templates/df_user/user_center_info.html
+++ b/templates/df_user/user_center_info.html
@@ -5,23 +5,35 @@
 
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
-			<h3>用户中心</h3>
+			<h3>User Center</h3>
 			<ul>
-				<li><a href="{% url "df_user:info" %}" class="active">· 个人信息</a></li>
-				<li><a href="/user/order/1">· 全部订单</a></li>
-				<li><a href="{% url "df_user:site" %}">· 收货地址</a></li>
+				<li><a href="{% url "df_user:info" %}" class="active">· Personal Information</a></li>
+				<li><a href="/user/order/1">· Order History</a></li>
+				<li><a href="{% url "df_user:site" %}">· Change the Password</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
 				<div class="info_con clearfix">
-				<h3 class="common_title2">基本信息</h3>
+				<h3 class="common_title2">Basic Information</h3>
 						<ul class="user_info_list">
-							<li><span>用户名：</span>{{ user_name }}</li>
-							<li><span>联系方式：</span>{{ user_phone }}</li>
-							<li><span>联系地址：</span>{{ user_address }}</li>
+							<li>
+                                <label>Name：</label>
+                                <input type="text" name="user_name" id="user_name">
+                            </li>
+                            <li>
+                                <label>Email：</label>
+                                <input type="text" name="email" id="email">
+                            </li>
+                            <li>
+                                <label>Phone：</label>
+                                <input type="text" name="user_name" id="user_name">
+                            </li>
+                            <li class="reg_sub">
+						        <input type="submit" value="Update Change">
+					        </li>
 						</ul>
 				</div>
-            <h3 class="common_title2">{{ explain }}</h3>
+            <h3 class="common_title2">View History</h3>
             <div class="has_view_list">
                 <ul class="goods_type_list clearfix">
                     {%  for good in goods_list %}
@@ -31,7 +43,7 @@
                         <div class="operate">
                             <span class="prize">￥{{ good.gprice }}</span>
                             <span class="unit">{{ good.gprice }}/{{ good.gunit }}</span>
-                            <a href="/cart/add{{ good.id }}_1/" class="add_goods" title="加入购物车"></a>
+                            <a href="/cart/add{{ good.id }}_1/" class="add_goods" title="add to cart"></a>
                         </div>
                     </li>
                     {% endfor %}
