--- a/templates/df_user/user_center_site.html
+++ b/templates/df_user/user_center_site.html
@@ -5,24 +5,15 @@
 
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
-			<h3>用户中心</h3>
+			<h3>User Center</h3>
 			<ul>
-                <li><a href="{% url "df_user:info" %}">· 个人信息</a></li>
-				<li><a href="{% url "df_user:order" 1 %}">· 全部订单</a></li>
-				<li><a href="{% url "df_user:site" %}" class="active">· 收货地址</a></li>
+                <li><a href="{% url "df_user:info" %}">· Personal Information</a></li>
+				<li><a href="{% url "df_user:order" 1 %}">· Order History</a></li>
+				<li><a href="{% url "df_user:site" %}" class="active">· Change the Password</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
-				<h3 class="common_title2">收货地址</h3>
-				<div class="site_con">
-					<dl>
-                        <dt>收件人：{{ user.ushou }}</dt>
-                        <dt>电话：{{ user.uphone }}</dt>
-                        <dt>当前地址：{{ user.uaddress }}</dt>
-{#                        <a href="/user/place_order" style="display: block; width: 80px; height:30px; line-height: 30px; text-align: center;font-size: 13px; " class="info_submit">提交订单</a>#}
-					</dl>
-				</div>
-				<h3 class="common_title2">编辑地址</h3>
+				<h3 class="common_title2">Change the Password</h3>
 				<div class="site_con">
 					<form action="{% url "df_user:site" %}" method="post">
                         {% csrf_token %}
